2019-1/231/users/4240/executions/1651_2447.log
== TEST (2019-04-11 18:45:09) 
-- CODE:
pr= float(input())
pg= float(input())
if(pr > pg)
fl= ("Falta")
pu= pr-pg
   print(fl,pu)
else:
tl= ("Troco de")
fg= 0
   print(tl,fg)

-- ERROR:
File "XXXX", line 3
    if(pr > pg)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:45:48) 
-- CODE:
pr= float(input())
pg= float(input())
if(pr > pg):
fl= ("Falta")
pu= pr-pg
   print(fl,pu)
else:
tl= ("Troco de")
fg= 0
   print(tl,fg)

-- ERROR:
File "XXXX", line 4
    fl= ("Falta")
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:47:04) 
-- CODE:
pr= float(input())
pg= float(input())
if(pr > pg):
   fl= ("Falta")
   pu= pr-pg
   print(fl,pu)
else:
   tl= ("Troco de")
   fg= 0
   print(tl,fg)

-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:47:14) 
-- CODE:
pr= float(input())
pg= float(input())
if(pr > pg):
   fl= ("Falta")
   pu= pr-pg
   print(fl,pu)
else:
   tl= ("Troco de")
   fg= 0
   print(tl,fg)

-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:48:38) 
-- CODE:
pr= float(input())
pg= float(input())
if(pr > pg):
   fl= ("Falta")
   pu= pr-pg
   print(fl,pu)
else:
   tl= ("Troco de")
   fg= pg-pr
   print(tl,fg)

-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:48:53) 
-- CODE:
pr= float(input())
pg= float(input())
if(pr > pg):
   fl= ("Falta")
   pu= pr-pg
   print(fl,pu)
else:
   tl= ("Troco de")
   fg= pg-pr
   print(tl,fg)

-- EXECUTION TIME:
0.172275
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
